docs/v1.3.0/zh/api/campaign-ext/MapWeatherVisual.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `MapWeatherVisual`
- [← 本领域 / 返回 campaign-ext](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# MapWeatherVisual

**Namespace:** SandBox.View.Map.Visuals
**Module:** SandBox.View
**Type:** `public class MapWeatherVisual : MapEntityVisual<WeatherNode>`
**Base:** `MapEntityVisual<WeatherNode>`
**File:** `SandBox.View/Map/Visuals/MapWeatherVisual.cs`

## 概述

`MapWeatherVisual` 位于 `SandBox.View.Map.Visuals`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `SandBox.View.Map.Visuals` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `Position` | `public Vec2 Position { get; }` |
| `PrefabSpawnOffset` | `public Vec2 PrefabSpawnOffset { get; }` |
| `MaskPixelIndex` | `public int MaskPixelIndex { get; }` |
| `InteractionPositionForPlayer` | `public override CampaignVec2 InteractionPositionForPlayer { get; }` |
| `AttachedTo` | `public override MapEntityVisual AttachedTo { get; }` |

## 主要方法

### ToString
`public override string ToString()`

**用途 / Purpose:** 处理 `to string` 相关逻辑。

### Tick
`public void Tick()`

**用途 / Purpose:** 处理 `tick` 相关逻辑。

### OnMapClick
`public override bool OnMapClick(bool followModifierUsed)`

**用途 / Purpose:** 当 `map click` 事件触发时调用此方法。

### OnHover
`public override void OnHover()`

**用途 / Purpose:** 当 `hover` 事件触发时调用此方法。

### OnOpenEncyclopedia
`public override void OnOpenEncyclopedia()`

**用途 / Purpose:** 当 `open encyclopedia` 事件触发时调用此方法。

### IsVisibleOrFadingOut
`public override bool IsVisibleOrFadingOut()`

**用途 / Purpose:** 处理 `is visible or fading out` 相关逻辑。

### GetVisualPosition
`public override Vec3 GetVisualPosition()`

**用途 / Purpose:** 获取 `visual position` 的当前值。

## 使用示例

```csharp
var value = new MapWeatherVisual();
value.ToString();
```

## 参见

- [完整类目录](../catalog)